parser.output
   0  $accept : %entry% $end

   1  program : stmt_list stmt

   2  stmt_list :
   3            | stmt_list stmt

   4  stmt : expr SEMC
   5       | DEF typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE
   6       | typ ID ASSIGN expr SEMC
   7       | typ ID SEMC
   8       | RETURN expr_opt SEMC
   9       | LBRACE stmt_list RBRACE
  10       | IF LPAREN expr RPAREN LBRACE stmt RBRACE
  11       | IF LPAREN expr RPAREN LBRACE stmt RBRACE ELSE LBRACE stmt RBRACE
  12       | FOR LPAREN expr SEMC expr SEMC expr RPAREN LBRACE stmt RBRACE
  13       | WHILE LPAREN expr RPAREN LBRACE stmt RBRACE

  14  formals_opt :
  15              | formal_list

  16  formal_list : typ ID
  17              | formal_list COMMA typ ID

  18  typ : INT
  19      | FLOAT
  20      | BOOL
  21      | STRING
  22      | VOID
  23      | typ ARRAY

  24  expr_opt :
  25           | expr

  26  expr : ILITERAL
  27       | FLITERAL
  28       | BLITERAL
  29       | SLITERAL
  30       | ID
  31       | expr PLUS expr
  32       | expr MINUS expr
  33       | expr TIMES expr
  34       | expr DIVIDE expr
  35       | expr LT expr
  36       | expr GT expr
  37       | expr EXP expr
  38       | expr MOD expr
  39       | expr LTE expr
  40       | expr GTE expr
  41       | expr EQ expr
  42       | expr NE expr
  43       | expr AND expr
  44       | expr OR expr
  45       | ID ASSIGN expr
  46       | ID LPAREN args_opt RPAREN
  47       | LPAREN expr RPAREN

  48  args_opt :
  49           | args_list

  50  args_list : expr
  51            | args_list COMMA expr

  52  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (52)
	stmt_list : .  (2)

	.  reduce 2

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (52)

	.  reduce 52


state 4
	program : stmt_list . stmt  (1)
	stmt_list : stmt_list . stmt  (3)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	STRING  shift 8
	VOID  shift 9
	IF  shift 10
	WHILE  shift 11
	FOR  shift 12
	DEF  shift 13
	RETURN  shift 14
	LPAREN  shift 15
	LBRACE  shift 16
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	stmt  goto 22
	expr  goto 23
	typ  goto 24


state 5
	typ : INT .  (18)

	.  reduce 18


state 6
	typ : FLOAT .  (19)

	.  reduce 19


state 7
	typ : BOOL .  (20)

	.  reduce 20


state 8
	typ : STRING .  (21)

	.  reduce 21


state 9
	typ : VOID .  (22)

	.  reduce 22


state 10
	stmt : IF . LPAREN expr RPAREN LBRACE stmt RBRACE  (10)
	stmt : IF . LPAREN expr RPAREN LBRACE stmt RBRACE ELSE LBRACE stmt RBRACE  (11)

	LPAREN  shift 25
	.  error


state 11
	stmt : WHILE . LPAREN expr RPAREN LBRACE stmt RBRACE  (13)

	LPAREN  shift 26
	.  error


state 12
	stmt : FOR . LPAREN expr SEMC expr SEMC expr RPAREN LBRACE stmt RBRACE  (12)

	LPAREN  shift 27
	.  error


state 13
	stmt : DEF . typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (5)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	STRING  shift 8
	VOID  shift 9
	.  error

	typ  goto 28


state 14
	stmt : RETURN . expr_opt SEMC  (8)
	expr_opt : .  (24)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	SEMC  reduce 24

	expr  goto 29
	expr_opt  goto 30


state 15
	expr : LPAREN . expr RPAREN  (47)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 31


state 16
	stmt : LBRACE . stmt_list RBRACE  (9)
	stmt_list : .  (2)

	.  reduce 2

	stmt_list  goto 32


state 17
	expr : ILITERAL .  (26)

	.  reduce 26


state 18
	expr : FLITERAL .  (27)

	.  reduce 27


state 19
	expr : ID .  (30)
	expr : ID . ASSIGN expr  (45)
	expr : ID . LPAREN args_opt RPAREN  (46)

	ASSIGN  shift 33
	LPAREN  shift 34
	PLUS  reduce 30
	MINUS  reduce 30
	TIMES  reduce 30
	DIVIDE  reduce 30
	EXP  reduce 30
	SEMC  reduce 30
	LT  reduce 30
	GT  reduce 30
	LTE  reduce 30
	GTE  reduce 30
	EQ  reduce 30
	NE  reduce 30
	AND  reduce 30
	OR  reduce 30
	MOD  reduce 30
	RPAREN  reduce 30
	COMMA  reduce 30


state 20
	expr : SLITERAL .  (29)

	.  reduce 29


state 21
	expr : BLITERAL .  (28)

	.  reduce 28


state 22
	program : stmt_list stmt .  (1)
	stmt_list : stmt_list stmt .  (3)

	$end  reduce 1
	INT  reduce 3
	FLOAT  reduce 3
	BOOL  reduce 3
	STRING  reduce 3
	VOID  reduce 3
	IF  reduce 3
	WHILE  reduce 3
	FOR  reduce 3
	DEF  reduce 3
	RETURN  reduce 3
	LPAREN  reduce 3
	LBRACE  reduce 3
	ILITERAL  reduce 3
	FLITERAL  reduce 3
	ID  reduce 3
	SLITERAL  reduce 3
	BLITERAL  reduce 3


state 23
	stmt : expr . SEMC  (4)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	SEMC  shift 40
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	.  error


state 24
	stmt : typ . ID ASSIGN expr SEMC  (6)
	stmt : typ . ID SEMC  (7)
	typ : typ . ARRAY  (23)

	ARRAY  shift 50
	ID  shift 51
	.  error


state 25
	stmt : IF LPAREN . expr RPAREN LBRACE stmt RBRACE  (10)
	stmt : IF LPAREN . expr RPAREN LBRACE stmt RBRACE ELSE LBRACE stmt RBRACE  (11)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 52


state 26
	stmt : WHILE LPAREN . expr RPAREN LBRACE stmt RBRACE  (13)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 53


state 27
	stmt : FOR LPAREN . expr SEMC expr SEMC expr RPAREN LBRACE stmt RBRACE  (12)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 54


state 28
	stmt : DEF typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (5)
	typ : typ . ARRAY  (23)

	ARRAY  shift 50
	ID  shift 55
	.  error


state 29
	expr_opt : expr .  (25)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	SEMC  reduce 25


state 30
	stmt : RETURN expr_opt . SEMC  (8)

	SEMC  shift 56
	.  error


state 31
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : LPAREN expr . RPAREN  (47)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	RPAREN  shift 57
	.  error


state 32
	stmt_list : stmt_list . stmt  (3)
	stmt : LBRACE stmt_list . RBRACE  (9)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	STRING  shift 8
	VOID  shift 9
	IF  shift 10
	WHILE  shift 11
	FOR  shift 12
	DEF  shift 13
	RETURN  shift 14
	LPAREN  shift 15
	RBRACE  shift 58
	LBRACE  shift 16
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	stmt  goto 59
	expr  goto 23
	typ  goto 24


state 33
	expr : ID ASSIGN . expr  (45)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 60


state 34
	expr : ID LPAREN . args_opt RPAREN  (46)
	args_opt : .  (48)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	RPAREN  reduce 48

	expr  goto 61
	args_opt  goto 62
	args_list  goto 63


state 35
	expr : expr PLUS . expr  (31)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 64


state 36
	expr : expr MINUS . expr  (32)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 65


state 37
	expr : expr TIMES . expr  (33)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 66


state 38
	expr : expr DIVIDE . expr  (34)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 67


state 39
	expr : expr EXP . expr  (37)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 68


state 40
	stmt : expr SEMC .  (4)

	.  reduce 4


state 41
	expr : expr LT . expr  (35)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 69


state 42
	expr : expr GT . expr  (36)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 70


state 43
	expr : expr LTE . expr  (39)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 71


state 44
	expr : expr GTE . expr  (40)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 72


state 45
	expr : expr EQ . expr  (41)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 73


state 46
	expr : expr NE . expr  (42)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 74


state 47
	expr : expr AND . expr  (43)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 75


state 48
	expr : expr OR . expr  (44)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 76


state 49
	expr : expr MOD . expr  (38)

	LPAREN  shift 15
	ILITERAL  shift 17
	FLITERAL  shift 18
	ID  shift 19
	SLITERAL  shift 20
	BLITERAL  shift 21
	.  error

	expr  goto 77


state 50
	typ : typ ARRAY .  (23)

	.  reduce 23


state 51
	stmt : typ ID . ASSIGN expr SEMC  (6)
	stmt : typ ID . SEMC  (7)

	ASSIGN  shift 78
	SEMC  shift 79
	.  error


state 52
	stmt : IF LPAREN expr . RPAREN LBRACE stmt RBRACE  (10)
	stmt : IF LPAREN expr . RPAREN LBRACE stmt RBRACE ELSE LBRACE stmt RBRACE  (11)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	RPAREN  shift 80
	.  error


state 53
	stmt : WHILE LPAREN expr . RPAREN LBRACE stmt RBRACE  (13)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	RPAREN  shift 81
	.  error


state 54
	stmt : FOR LPAREN expr . SEMC expr SEMC expr RPAREN LBRACE stmt RBRACE  (12)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	SEMC  shift 82
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	.  error


state 55
	stmt : DEF typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (5)

	LPAREN  shift 83
	.  error


state 56
	stmt : RETURN expr_opt SEMC .  (8)

	.  reduce 8


state 57
	expr : LPAREN expr RPAREN .  (47)

	.  reduce 47


state 58
	stmt : LBRACE stmt_list RBRACE .  (9)

	.  reduce 9


state 59
	stmt_list : stmt_list stmt .  (3)

	.  reduce 3


state 60
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : ID ASSIGN expr .  (45)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	SEMC  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45


state 61
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	args_list : expr .  (50)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	LT  shift 41
	GT  shift 42
	LTE  shift 43
	GTE  shift 44
	EQ  shift 45
	NE  shift 46
	AND  shift 47
	OR  shift 48
	MOD  shift 49
	RPAREN  reduce 50
	COMMA  reduce 50


state 62
	expr : ID LPAREN args_opt . RPAREN  (46)

	RPAREN  shift 84
	.  error


state 63
	args_opt : args_list .  (49)
	args_list : args_list . COMMA expr  (51)

	COMMA  shift 85
	RPAREN  reduce 49


state 64
	expr : expr . PLUS expr  (31)
	expr : expr PLUS expr .  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	MOD  shift 49
	PLUS  reduce 31
	MINUS  reduce 31
	SEMC  reduce 31
	LT  reduce 31
	GT  reduce 31
	LTE  reduce 31
	GTE  reduce 31
	EQ  reduce 31
	NE  reduce 31
	AND  reduce 31
	OR  reduce 31
	RPAREN  reduce 31
	COMMA  reduce 31


state 65
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr MINUS expr .  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	MOD  shift 49
	PLUS  reduce 32
	MINUS  reduce 32
	SEMC  reduce 32
	LT  reduce 32
	GT  reduce 32
	LTE  reduce 32
	GTE  reduce 32
	EQ  reduce 32
	NE  reduce 32
	AND  reduce 32
	OR  reduce 32
	RPAREN  reduce 32
	COMMA  reduce 32


state 66
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr TIMES expr .  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	.  reduce 33


state 67
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr DIVIDE expr .  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	.  reduce 34


state 68
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr EXP expr .  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	.  reduce 37


state 69
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr LT expr .  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	MOD  shift 49
	SEMC  reduce 35
	LT  reduce 35
	GT  reduce 35
	LTE  reduce 35
	GTE  reduce 35
	EQ  reduce 35
	NE  reduce 35
	AND  reduce 35
	OR  reduce 35
	RPAREN  reduce 35
	COMMA  reduce 35


state 70
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr GT expr .  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	MOD  shift 49
	SEMC  reduce 36
	LT  reduce 36
	GT  reduce 36
	LTE  reduce 36
	GTE  reduce 36
	EQ  reduce 36
	NE  reduce 36
	AND  reduce 36
	OR  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36


state 71
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr LTE expr .  (39)
	expr : expr . GTE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 35
	MINUS  shift 36
	TIMES  shift 37
	DIVIDE  shift 38
	EXP  shift 39
	MOD  shift 49
	SEMC  reduce 39
	LT  reduce 39
	GT  reduce 39
	LTE  reduce 39
	GTE  reduce 39
	EQ  reduce 39
	NE  reduce 39
	AND  reduce 39
	OR  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39


state 72
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . TIMES expr  (33)
	expr : expr . DIVIDE expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . GT expr  (36)
	expr : expr . EXP expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . LTE expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr GTE expr .  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NE expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
